force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/Geographic_Definition__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geographic Definition</label>
    <referenceTo>Geographic_Definition__c</referenceTo>
    <relationshipLabel>Program Engagements</relationshipLabel>
    <relationshipName>Program_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>