force-app/main/default/objects/pmdm__ProgramEngagement__c/fields/pmdm__AttendanceSummary__c.field-meta.xml
<CustomField>
    <fullName>pmdm__AttendanceSummary__c</fullName>
    <formula>IF(pmdm__NumAbsentServiceDeliveries__c &gt; 0 || pmdm__NumPresentServiceDeliveries__c &gt; 0,
    TEXT(ROUND(pmdm__AttendanceRate__c,2)*100) &amp; &quot;% (&quot; &amp; 
    TEXT(pmdm__NumPresentServiceDeliveries__c) &amp; 
    &quot;/&quot; &amp; 
    TEXT(pmdm__NumPresentServiceDeliveries__c + pmdm__NumAbsentServiceDeliveries__c) &amp;
    &quot;)&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance Summary</label>
    <type>Text</type>
</CustomField>